--- a/index.html
+++ b/index.html
@@ -646,10 +646,7 @@
                                   >
                                     <tr>
                                       <td
-                                        style="
-                                          padding-top: 50px;
-                                          padding-bottom: 20px;
-                                        "
+                                        style="padding-top: 40px;"
                                       >
                                         <!--[if (gte mso 9)| (IE)]>
                 <table width="150" align="center" cellpadding="0" cellspacing="0" border="0"> 
@@ -1088,7 +1085,7 @@
                                       <td
                                         style="
                                           padding-top: 40px;
-                                          padding-bottom: 20px;
+                                          padding-bottom: 40px;
                                         "
                                       >
                                         <!--[if (gte mso 9)| (IE)]>
